--- a/public_html/CSS/Style.css
+++ b/public_html/CSS/Style.css
@@ -1,12 +1,18 @@
-h1 {
-    text-align: center
-}
+
 img {
-   padding-left: 525px;
+    padding-left: 0px;
 }
 .car {
     margin: 0 auto
+}h1 {
+    text-align: center
 }
 h2 {
+    text-align: center
+}
+h4 {
+    text-align: center
+}
+h3 {
     text-align: center
 }
